fix: bob z-index position

--- a/apps/frontend/src/Pages/Login/login.css
+++ b/apps/frontend/src/Pages/Login/login.css
@@ -22,6 +22,7 @@
 .login__logo__link {
     color: black;
     text-decoration: none;
+    z-index: 1;
 }
 
 .login__container {
@@ -48,6 +49,7 @@
     flex-direction: column;
     align-items: center;
     gap: var(--normal-indent);
+    z-index: 1;
 }
 
 .form-input {
@@ -58,7 +60,6 @@
     background-color: #ffffff;
     box-shadow: var(--input-box-shadow);
     border-radius: 0.5rem;
-    z-index: 1;
 }
 
 .form-input:focus {
@@ -125,6 +126,7 @@
         position: absolute;
         transform: translateY(0);
         animation: jump 2s ease infinite forwards;
+        z-index: 0;
     }
 
     @keyframes jump {
