--- a/apps/frontend/src/Pages/Register/register.css
+++ b/apps/frontend/src/Pages/Register/register.css
@@ -20,6 +20,7 @@
 .register__logo__link {
     color: black;
     text-decoration: none;
+    z-index: 2;
 }
 
 .register__container {
@@ -56,6 +57,7 @@
     background-color: #ffffff;
     box-shadow: var(--input-box-shadow);
     border-radius: 0.5rem;
+    z-index: 1;
 }
 
 .form-input:focus {
@@ -122,6 +124,7 @@
         width: 100%;
         position: absolute;
         animation: rotateAnimation 35s ease infinite forwards;
+        z-index: -1;
     }
 
     /* Dont get scared when you see this, let the animation play so you know what it does */
